--- a/assets/css/HeaderBar.css
+++ b/assets/css/HeaderBar.css
@@ -1,5 +1,5 @@
 :root{
-    --background: rgba(100, 100, 100, 1);
+    --background: rgba(60, 60, 60, 1);
     --border: 2px solid rgba(200, 200, 200, 1);
 
     --padding-small: 12px;
@@ -15,9 +15,9 @@
     display: flex;
     background-color: var(--background);
     border: var(--border);
-    margin: 20px;
     border-radius: 32px;
     color: var(--text-color);
+    height: fit-content;
 }
 
 
