--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -217,6 +217,14 @@ h1, h2, h3, h4, h5, h6{
     margin: 0;
 }
 
-h3{
+h1{
+    font-size: 64px;
+}
+
+h2{
     font-size: 48px;
+}
+
+h3{
+    font-size: 32px;
 }
