--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -9,14 +9,20 @@ body{
     gap: var(--margin);
     padding: var(--margin);
     height: 100vh;
-    background-color: #222;
+    background-color: #181818;
 }
 
 body > *{
     background-color: var(--background);
     border: var(--border);
-    border-radius: 32px;
+    border-radius: 12px;
     color: var(--text-color);
+}
+
+body > *:hover{
+    transition: 0.2s;
+    background-color: #444;
+    border: var(--border-hover);
 }
 
 #HeaderBar{
