--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,8 +1,10 @@
 :root{
-    --background: rgba(60, 60, 60, 1);
-    --border: 2px solid rgba(200, 200, 200, 1);
+    --background: rgba(40, 40, 40, 1);
+    --border: 2px solid rgba(128, 128, 128, 1);
+    --border-hover: 2px solid rgba(192, 192, 192, 1);
+    --border-inner: 1px solid rgba(160, 160, 160, 1);
 
     --padding-small: 12px;
     --text-color: rgba(200, 200, 200, 1);
-    --margin: 50px;
+    --margin: 20px;
 }
